classDiagram
    class User {
        int id (PK)
        string email (UNIQUE)
        string password_hash
        string full_name
    }

    class Portfolio {
        int id (PK)
        int user_id (FK)
        decimal cash_balance
        string name
    }

    class InternationalAccount {
        int id (PK)
        int portfolio_id (FK)
        int currency_id (FK)
        decimal balance
        datetime created_at
    }

    class Currency {
        int id (PK)
        string code (max 3)
        string name
    }

    class Asset {
        int id (PK)
        string ticker
        string name
        string asset_type
    }

    class StockAsset {
        int id (PK)
        int asset_id (FK)
    }

    class Transaction {
        int id (PK)
        int account_id (FK)
        int asset_id (FK)
        Direction direction
        float quantity
        decimal price_at_execution
        datetime executed_at
    }

    class Direction {
        <<enumeration>>
        BUY
        SELL
    }

    User "1" --> "*" Portfolio : owns
    Portfolio "1" --> "*" InternationalAccount : contains
    InternationalAccount "1" --> "*" Transaction : records
    Currency "1" --> "*" InternationalAccount : denominated_in
    Asset "1" --> "*" Transaction : executes
    Asset "1" --> "*" StockAsset : specializes
    Transaction "1" --> "1" Direction : uses